// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsDetailHeader should match a snapshot for desktop 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-mb5"
      >
        <mock-styled.div>
          <mock-styled.img
            alt="will-test-dev-co-voracious-person"
            classname="el-fade-in"
            src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
          />
        </mock-styled.div>
        <mock-styled.div
          classname="el-flex-column el-flex-justify-between"
        >
          <mock-styled.div
            classname="el-flex-column"
          >
            <mock-styled.h1
              classname="el-has-no-margin"
            >
              will-test-dev-co-voracious-person
            </mock-styled.h1>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="el-mr5 el-intent-success el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.321 1.321 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.p
              classname="el-mr5 el-has-no-margin"
            >
              Verified by Reapit
            </mock-styled.p>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.p
              classname="el-mr5 el-has-bold-text el-has-no-margin"
            >
              Integration
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-mb5"
    >
      <mock-styled.div>
        <mock-styled.img
          alt="will-test-dev-co-voracious-person"
          classname="el-fade-in"
          src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
        />
      </mock-styled.div>
      <mock-styled.div
        classname="el-flex-column el-flex-justify-between"
      >
        <mock-styled.div
          classname="el-flex-column"
        >
          <mock-styled.h1
            classname="el-has-no-margin"
          >
            will-test-dev-co-voracious-person
          </mock-styled.h1>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.span
            classname="el-mr5 el-intent-success el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.321 1.321 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </mock-styled.span>
          <mock-styled.p
            classname="el-mr5 el-has-no-margin"
          >
            Verified by Reapit
          </mock-styled.p>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-fade-in"
              >
                Category
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p
            classname="el-mr5 el-has-bold-text el-has-no-margin"
          >
            Integration
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsDetailHeader should match a snapshot for mobile 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-mb5"
      >
        <mock-styled.div
          classname="el-flex-column el-flex-justify-between"
        >
          <mock-styled.div
            classname="el-flex-justify-between el-flex-align-end el-mb3"
          >
            <mock-styled.h2
              classname="mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 el-has-bold-text el-has-no-margin"
            >
              will-test-dev-co-voracious-person
            </mock-styled.h2>
            <mock-styled.div
              classname=""
            >
              <mock-styled.span
                classname="el-mr2 el-intent-success el-icon-new"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.321 1.321 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </mock-styled.span>
              <mock-styled.p
                classname="el-mr2 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 el-has-no-margin"
              >
                Verified by Reapit
              </mock-styled.p>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.img
                alt="will-test-dev-co-voracious-person"
                classname="el-fade-in"
                src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
              />
            </mock-styled.div>
            <mock-styled.p
              classname="el-has-grey-text"
            >
              Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-fade-in"
                >
                  Category
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.p
              classname="el-mr5 el-has-bold-text el-has-no-margin"
            >
              Integration
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-mb5"
    >
      <mock-styled.div
        classname="el-flex-column el-flex-justify-between"
      >
        <mock-styled.div
          classname="el-flex-justify-between el-flex-align-end el-mb3"
        >
          <mock-styled.h2
            classname="mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 el-has-bold-text el-has-no-margin"
          >
            will-test-dev-co-voracious-person
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.span
              classname="el-mr2 el-intent-success el-icon-new"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M20.289 6.387a1.323 1.323 0 0 0-1.87 0l-8.42 8.42-3.741-3.743a1.323 1.323 0 0 0-1.87 1.87l4.676 4.678a1.321 1.321 0 0 0 1.87 0l9.355-9.354a1.323 1.323 0 0 0 0-1.87Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </mock-styled.span>
            <mock-styled.p
              classname="el-mr2 mock-css.
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
  overflow: hidden;
 el-has-no-margin"
            >
              Verified by Reapit
            </mock-styled.p>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.img
              alt="will-test-dev-co-voracious-person"
              classname="el-fade-in"
              src="https://reapit-marketplace-app-media-dev.s3.eu-west-2.amazonaws.com/Online-Check-List-icon.png"
            />
          </mock-styled.div>
          <mock-styled.p
            classname="el-has-grey-text"
          >
            Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar Foo bar
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-fade-in"
              >
                Category
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.p
            classname="el-mr5 el-has-bold-text el-has-no-margin"
          >
            Integration
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
